# bgcoin

./: .cirrus.yml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  COPYING  README.md  libbitcoinkernel.pc.in  vcpkg.json
ci/: lint_imagefile
cmake/: introspection.cmake  tests.cmake
contrib/: README.md  valgrind.supp
depends/: Makefile  packages.md
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  assets-attribution.md  assumeutxo.md  benchmarking.md  bips.md  bitcoin-conf.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows-msvc.md  build-windows.md  cjdns.md  dependencies.md  descriptors.md  developer-notes.md  dnsseed-policy.md  external-signer.md  files.md  fuzzing.md  i2p.md  init.md  managing-wallets.md  multiprocess.md  multisig-tutorial.md  offline-signing-tutorial.md  p2p-bad-ports.md  productivity.md  psbt.md  readme.txt  reduce-memory.md  reduce-traffic.md  release-notes-empty-template.md  release-process.md  (+5 more)
share/: setup.nsi.in
src/: .clang-tidy  CMakeLists.txt  addrdb.cpp  addrdb.h  addresstype.cpp  addresstype.h  addrman.cpp  addrman.h  addrman_impl.h  arith_uint256.cpp  arith_uint256.h  attributes.h  banman.cpp  base58.cpp  bgcoin-chainstate.cpp  bgcoin-cli-res.rc  bgcoin-cli.cpp  bgcoin-tx-res.rc  bgcoin-tx.cpp  bgcoin-util-res.rc  bgcoin-util.cpp  bgcoin-wallet-res.rc  bgcoin-wallet.cpp  bgcoind-res.rc  bip324.cpp  (+37 more)
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  apptests.cpp  optiontests.cpp  test_main.cpp  uritests.cpp  wallettests.cpp
(+602 files in other folders)
